# khorsyio

./: .dockerignore  .gitignore  LICENSE  README.RU.md  README.md  pyproject.toml
khorsyio/: __init__.py
khorsyio/core/: app.py  bus.py  client.py  domain.py  handler.py  http.py  settings.py  structs.py  transport.py  worker.py
khorsyio/db/: __init__.py  database.py  query.py  sa.py
scripts/: release.py
tests/: TEST_PLAN.md  conftest.py  test_bus.py  test_db_query.py  test_http.py  test_multi_core.py
